# Github-Actions

./: .gitignore  pyproject.toml
.github/workflows/: pipeline.yaml  postgres-env-vars.yaml  postgres-explicit-env.yml  postgres-secrets.yml  postgres-workflow-env.yml  python-tests.yml  server.yml
Docs/: 00 ¿Qué es CI y CD?.md  01 Explicación De Entorno Comandos.md  01 configurando entorno.md  02 Guía de CI - CD con GitHub Actions.md  02 exṕlicaicon.md  03 .md  03 Explicación Del Fichero De Configuración .md  04 Indicadores de estado en GitHub Actions.md  05 Imágenes (Runners) Deprecadas En GitHub Actions.md  06 Configuración y Nomenclatura de Workflows en GitHub Actions.md  06.md  07.md  08 acciones de github.md  09.md  10 testing.md  11 reglas de git.md  12 env y secrets.md  13 env explicacion.md  14 configurar env en github.md  15 env vars.md  15 expliaciaon name githyub wor.md  16 variables actions.md  17 secrets actoin.md  18 git pull request.md
src/: main.py
tests/: conftest.py  test_health.py  test_users_api.py
